--- a/.github/workflows/master-deployment.yml
+++ b/.github/workflows/master-deployment.yml
@@ -29,7 +29,7 @@ jobs:
    - name: Cypress run
      uses: cypress-io/github-action@v2
      with:
-        build: yarn run build
+        build: PRODUCTION=true && yarn run build
         start: yarn run dev
         wait-on: 'http://localhost:3000'
 #  build-s3:
