--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dev": "yarn webpack-dev-server --mode development",
     "debug": "yarn --node-options='--inspect' webpack-dev-server --mode development",
     "build": "yarn webpack --mode production && cp -r public/* dist/",
+    "build-minimal": "yarn webpack --mode production --env production && cp -r public/* dist/",
     "test": "yarn cypress open",
     "test-headless": "yarn cypress run"
   },
