upgrade to neo4j-cypher/react-codemirror package

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@material-ui/styles": "^4.11.4",
     "@mui/material": "^5.3.0",
     "@mui/x-data-grid": "5.10.0",
+    "@neo4j-cypher/react-codemirror": "^1.0.0-next.9",
     "@nivo/bar": "^0.79.1",
     "@nivo/circle-packing": "^0.79.1",
     "@nivo/core": "^0.79.0",
@@ -48,8 +49,6 @@
     "@nivo/treemap": "^0.79.1",
     "babel-runtime": "^6.26.0",
     "classnames": "^2.3.1",
-    "codemirror": "^5.65.3",
-    "cypher-codemirror": "1.1.9",
     "d3-scale-chromatic": "^3.0.0",
     "dom-to-image": "^2.6.0",
     "leaflet": "^1.7.1",
