Updated deployment scripts to use minimal build without source maps (#271)
* Changed build script to use mimimal (no source map) deployment

* Added TODOs based on comments

--- a/.github/workflows/develop-deployment.yml
+++ b/.github/workflows/develop-deployment.yml
@@ -46,7 +46,7 @@ jobs:
      with:
        node-version: ${{ matrix.node-version }}
    - run: yarn install
-   - run: PRODUCTION=true && yarn run build
+   - run: yarn run build-minimal
    - name: Set AWS credentials
      uses: aws-actions/configure-aws-credentials@v1
      with:
