--- a/package.json
+++ b/package.json
@@ -30,13 +30,15 @@
   "keywords": [],
   "author": "Neo4j Labs",
   "dependencies": {
+    "@codemirror/language-data": "^6.1.0",
+    "@codemirror/lang-markdown": "^6.0.5",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/styles": "^4.11.4",
     "@mui/material": "^5.3.0",
     "@mui/x-data-grid": "5.10.0",
-    "@neo4j-cypher/react-codemirror": "1.0.0-next.13",
+    "@neo4j-cypher/react-codemirror": "^1.0.0-next.15",
     "@nivo/bar": "^0.79.1",
     "@nivo/circle-packing": "^0.79.1",
     "@nivo/core": "^0.79.0",
