works kind of now with Turbo for gallery

--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,8 @@ cypress/support
 cypress/videos
 
 # production
-/build
-/dist
+**/build
+**/dist
 
 # misc
 .DS_Store
@@ -34,7 +34,7 @@ yarn-error.log*
 *.tgz
 
 # package directories
-node_modules
+**/node_modules
 jspm_packages
 
 # Serverless directories
