--- a/apps/gallery/package.json
+++ b/apps/gallery/package.json
@@ -10,13 +10,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "web-vitals": "^2.1.0"
-
-
   },
   "scripts": {
     "dev": "yarn webpack-dev-server --mode development",
-    "build": "yarn webpack --mode production"
-   },
+    "build": "yarn webpack --mode production && cp -r public/* dist/"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
