--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "lodash.isequal": "^4.5.0",
     "material-ui-color-picker": "^3.5.1",
     "neo4j-client-sso": "^1.2.2",
+    "@neo4j_solutions/solutions-auth-lib": "^1.0.1",
     "react": "^17.0.2",
     "react-cool-dimensions": "^2.0.7",
     "react-dom": "^17.0.2",
@@ -75,6 +76,8 @@
     "react-leaflet-heatmap-layer-v3": "^3.0.3-beta-1",
     "react-markdown": "^8.0.0",
     "react-redux": "^7.2.6",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "remark-gfm": "^3.0.1",
