--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
   "keywords": [],
   "author": "Neo4j Labs",
   "dependencies": {
-    "@codemirror/language-data": "^6.1.0",
     "@codemirror/lang-markdown": "^6.0.5",
+    "@codemirror/language-data": "^6.1.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
@@ -44,6 +44,7 @@
     "@mui/material": "^5.3.0",
     "@mui/x-data-grid": "5.10.0",
     "@neo4j-cypher/react-codemirror": "^1.0.0-next.20",
+    "@neo4j_solutions/solutions-auth-lib": "^1.0.1",
     "@nivo/bar": "^0.80.0",
     "@nivo/circle-packing": "^0.80.0",
     "@nivo/core": "^0.80.0",
@@ -63,10 +64,10 @@
     "lodash.isequal": "^4.5.0",
     "material-ui-color-picker": "^3.5.1",
     "neo4j-client-sso": "^1.2.2",
-    "@neo4j_solutions/solutions-auth-lib": "^1.0.1",
     "react": "^17.0.2",
     "react-cool-dimensions": "^2.0.7",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^14.2.3",
     "react-force-graph-2d": "^1.23.8",
     "react-gauge-chart": "^0.4.0",
     "react-grid-layout": "^1.3.4",
