--- a/package.json
+++ b/package.json
@@ -82,7 +82,8 @@
     "redux-thunk": "^2.4.1",
     "remark-gfm": "^3.0.1",
     "reselect": "^4.1.5",
-    "use-neo4j": "^0.3.13"
+    "use-neo4j": "^0.3.13",
+    "yaml": "^2.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.8",
