--- a/public/config.json
+++ b/public/config.json
@@ -1,12 +1,12 @@
 {
-    "ssoEnabled": false,
-    "ssoDiscoveryUrl": "https://example.com",
-    "standalone": false,
-    "standaloneProtocol": "neo4j",
-    "standaloneHost": "localhost",
-    "standalonePort": "7687",
-    "standaloneDatabase": "neo4j",
-    "standaloneDashboardName": "My Dashboard",
-    "standaloneDashboardDatabase": "dashboards",
-    "standaloneDashboardURL": ""
+  "ssoEnabled": true,
+  "ssoDiscoveryUrl": "http://neo4j.iclinicalgraph.net:7687",
+  "standalone": false,
+  "standaloneProtocol": "neo4j",
+  "standaloneHost": "localhost",
+  "standalonePort": "7687",
+  "standaloneDatabase": "neo4j",
+  "standaloneDashboardName": "My Dashboard",
+  "standaloneDashboardDatabase": "dashboards",
+  "standaloneDashboardURL": ""
 }
