--- a/package.json
+++ b/package.json
@@ -67,6 +67,9 @@
     "lodash.isequal": "^4.5.0",
     "material-ui-color-picker": "^3.5.1",
     "neo4j-client-sso": "^1.2.2",
+    "postcss": "^8.4.21",
+    "postcss-loader": "^7.2.4",
+    "postcss-preset-env": "^8.3.0",
     "react": "^17.0.2",
     "react-cool-dimensions": "^2.0.7",
     "react-dom": "^17.0.2",
@@ -84,6 +87,7 @@
     "redux-thunk": "^2.4.1",
     "remark-gfm": "^3.0.1",
     "reselect": "^4.1.5",
+    "tailwindcss": "^3.3.1",
     "use-neo4j": "^0.3.13"
   },
   "devDependencies": {
@@ -117,8 +121,9 @@
     "style-loader": "^1.1.3",
     "styled-components": "^5.3.3",
     "typescript": "^4.8.4",
-    "webpack": "^5.67.0",
+    "webpack": "^5.77.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.3"
+    "webpack-dev-server": "^4.7.3",
+    "webpack-hot-middleware": "^2.25.3"
   }
 }
