--- a/apps/gallery/package.json
+++ b/apps/gallery/package.json
@@ -12,7 +12,7 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "dev": "yarn webpack-dev-server --mode development",
+    "start": "yarn webpack-dev-server --mode development",
     "build": "yarn webpack --mode production && cp -r public/* dist/"
   },
   "browserslist": {
