--- a/apps/neodash-editor/package.json
+++ b/apps/neodash-editor/package.json
@@ -21,7 +21,7 @@
     }
   ],
   "scripts": {
-    "dev": "yarn webpack-dev-server --mode development",
+    "start": "yarn webpack-dev-server --mode development",
     "debug": "yarn --node-options='--inspect' webpack-dev-server --mode development",
     "build": "yarn webpack --mode production && cp -r public/* dist/",
     "build-minimal": "yarn webpack --mode production --env production && cp -r public/* dist/",
