--- a/turbo.json
+++ b/turbo.json
@@ -1,9 +1,11 @@
 {
-    "$schema": "https://turbo.build/schema.json",
-    "pipeline": {
-      "build": {
-        "outputs": [".next/**"]
-      },
-      "lint": {}
-    }
+  "$schema": "https://turbo.build/schema.json",
+  "pipeline": {
+    "build": {
+      "outputs": [".next/**"]
+    },
+    "install": {},
+    "lint": {},
+    "start": {}
   }
+}
