--- a/package.json
+++ b/package.json
@@ -123,7 +123,6 @@
     "typescript": "^4.8.4",
     "webpack": "^5.77.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.3",
-    "webpack-hot-middleware": "^2.25.3"
+    "webpack-dev-server": "^4.7.3"
   }
 }
