--- a/apps/gallery/package.json
+++ b/apps/gallery/package.json
@@ -7,13 +7,14 @@
     "@neo4j-ndl/react": "^0.8.3",
     "@types/react-dom": "^18.0.10",
     "neo4j-driver": "^5.0.1",
+    "postcss-loader": "^7.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "yarn webpack-dev-server --mode development",
-    "build": "yarn webpack --mode production && cp -r public/* dist/"
+    "build": "yarn webpack --mode production"
   },
   "browserslist": {
     "production": [
@@ -28,9 +29,6 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.12",
-    "postcss": "^8.4.17",
-    "tailwindcss": "^3.1.8",
     "@babel/cli": "^7.16.8",
     "@babel/core": "^7.16.12",
     "@babel/plugin-transform-runtime": "^7.16.10",
@@ -43,8 +41,9 @@
     "@redux-devtools/extension": "^3.2.3",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
+    "autoprefixer": "^10.4.12",
     "babel-loader": "^8.2.3",
-    "css-loader": "^3.6.0",
+    "css-loader": "^6.7.3",
     "cypress": "^9.5.3",
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
@@ -52,17 +51,22 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
+    "postcss": "^8.4.21",
+    "postcss-loader": "^7.2.4",
+    "postcss-preset-env": "^8.3.1",
     "prettier": "^2.7.1",
     "react-hot-loader": "^4.13.0",
     "serverless-finch": "^4.0.0",
     "source-map-loader": "^4.0.0",
-    "style-loader": "^1.1.3",
+    "style-loader": "^3.3.2",
     "styled-components": "^5.3.3",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.8.4",
-    "webpack": "^5.67.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.3"
+    "webpack": "^5.78.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.2"
   }
 }
