Sync development from closed-source project repository (#401)
* Resyncing with extensions repo after linting

* Resyncing with extensions repo after linting

* Update LICENSE and README

* Resync

* Re-apply linting

* Restore width/height in graphchart

* Style fixes

* Fixing out-of-sync code

* Bumped version

* Hotfix for broken npm pack command

* Republish 2.2.1 extended

* Fixed deployment pipeline

* Retrigger workflow

* Added WHO styling

* Temporarily disabling tests

* Generalized hardcoded settings

* Generalized placeholder branding

* Customizable connection modal footer

* Added optional check for welcome modal

* Removing old IconButton from Dashboard Placeholder

* Page changes on graph and table

* eslint

* eslint2

* eslint3

* changed structure of the MapChart, by isolating each layer in a different file

* First draft of drilldownMap, to have discussion around geojsons and to bind data to map

* fix wrong import

* fix missing functio in drilldownMap

* Update package.json

* Removed outdated deploy script

* added actions into new graph

* Reworking map to use WHO geoJson, to move those in the neodash CDN

* removing old geojson

* Moved geojson files to CDN

* Work in progress on node editing

* second draft for polygon map, todo: remove choropleth when polygonmap is ready

* Updated graph

* Second draft of the map, to fix data bindign process and legend styòing

* Changed binding logic to actually remove unbinded data from legend calculation

* Removed Choropleth, updated object/file naming conventions

* Updated names

* Updated names

* fixed clusterMarkers and removed older lines

* Adding TODO

* WIP on graph interactivity

* Better adding of nodes

* Added expansion

* Relationship and node editing interface (not complete)

* bootstrapping alert logic, now we have a button that can trigger the rendering and defined a new field in the state 

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neodash",
-  "version": "2.2.3",
+  "version": "2.2.4",
   "description": "NeoDash - Neo4j Dashboard Builder",
   "neo4jDesktop": {
     "apiVersion": "^1.2.0"
@@ -28,7 +28,6 @@
     "format": "prettier --write \"**/*.{ts,tsx}\"",
     "lint": "eslint --ext .ts --ext .tsx .",
     "lint-staged": "lint-staged --config .lintstagedrc.json",
-    "prepare": "husky install",
     "test": "yarn cypress open",
     "test-headless": "yarn cypress run"
   },
@@ -64,6 +63,7 @@
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
     "material-ui-color-picker": "^3.5.1",
+    "mui-nested-menu": "^3.2.0",
     "neo4j-client-sso": "^1.2.2",
     "react": "^17.0.2",
     "react-cool-dimensions": "^2.0.7",
