--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-leaflet-heatmap-layer-v3": "^3.0.3-beta-1",
     "react-markdown": "^8.0.0",
     "react-redux": "^7.2.6",
+    "react-show-more-text": "^1.6.2",
     "react-use-error-boundary": "^3.0.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
