working on scatterploy

--- a/package.json
+++ b/package.json
@@ -52,9 +52,11 @@
     "@nivo/pie": "^0.80.0",
     "@nivo/radar": "^0.80.0",
     "@nivo/sankey": "^0.80.0",
+    "@nivo/scatterplot": "^0.80.0",
     "@nivo/sunburst": "^0.80.0",
     "@nivo/treemap": "^0.80.0",
     "babel-runtime": "^6.26.0",
+    "chroma-js": "^2.4.2",
     "classnames": "^2.3.1",
     "d3-scale-chromatic": "^3.0.0",
     "dayjs": "^1.11.7",
