--- a/package.json
+++ b/package.json
@@ -38,10 +38,9 @@
     "@codemirror/lang-markdown": "^6.0.5",
     "@codemirror/language-data": "^6.1.0",
     "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@material-ui/lab": "^4.0.0-alpha.60",
-    "@material-ui/styles": "^4.11.4",
-    "@mui/material": "^5.3.0",
+    "@mui/material": "^5.11.16",
+    "@mui/styles": "^5.11.16",
+    "@mui/icons-material": "^5.11.16",
     "@mui/x-data-grid": "5.10.0",
     "@mui/x-date-pickers": "^5.0.17",
     "@neo4j-cypher/react-codemirror": "^1.0.2",
