--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "keywords": [],
   "author": "Neo4j Labs",
   "dependencies": {
+    "auth0-js": "^9.19.0",
     "@codemirror/lang-markdown": "^6.0.5",
     "@codemirror/language-data": "^6.1.0",
     "@material-ui/core": "^4.12.3",
@@ -44,7 +45,6 @@
     "@mui/material": "^5.3.0",
     "@mui/x-data-grid": "5.10.0",
     "@neo4j-cypher/react-codemirror": "^1.0.0-next.20",
-    "@neo4j_solutions/solutions-auth-lib": "^1.0.1",
     "@nivo/bar": "^0.80.0",
     "@nivo/circle-packing": "^0.80.0",
     "@nivo/core": "^0.80.0",
