Add Theme and Color picker migration out of Mui4

--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
   "dependencies": {
     "@codemirror/lang-markdown": "^6.0.5",
     "@codemirror/language-data": "^6.1.0",
-    "@mui/material": "^5.11.16",
-    "@mui/styles": "^5.11.16",
     "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.3",
+    "@mui/styles": "^5.12.3",
     "@mui/x-data-grid": "5.10.0",
     "@mui/x-date-pickers": "^5.0.17",
     "@neo4j-cypher/react-codemirror": "^1.0.2",
@@ -62,12 +62,14 @@
     "leaflet": "^1.7.1",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
-    "material-ui-color-picker": "^3.5.1",
+    "material-ui-popup-state": "^1.9.3",
+    "mui-color": "^2.0.0-beta.2",
     "mui-nested-menu": "^3.2.0",
     "neo4j-client-sso": "^1.2.2",
     "postcss": "^8.4.21",
     "postcss-loader": "^7.2.4",
     "postcss-preset-env": "^8.3.0",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-cool-dimensions": "^2.0.7",
     "react-dom": "^17.0.2",
