--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "material-ui-color-picker": "^3.5.1",
     "mui-nested-menu": "^3.2.0",
     "neo4j-client-sso": "^1.2.2",
+    "openai": "^3.2.1",
     "react": "^17.0.2",
     "react-cool-dimensions": "^2.0.7",
     "react-dom": "^17.0.2",
