--- a/.github/workflows/develop-test.yml
+++ b/.github/workflows/develop-test.yml
@@ -35,4 +35,5 @@ jobs:
         browser: chrome
         CYPRESS_RECORD_KEY: 4737836d-3dd9-4903-bcf6-24c5e4d81c6c
         CYPRESS_PROJECT_ID: a8nh14
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
