Cypress dashboard ci

--- a/.github/workflows/develop-test.yml
+++ b/.github/workflows/develop-test.yml
@@ -33,6 +33,8 @@ jobs:
         start: yarn run dev
         wait-on: 'http://localhost:3000'
         browser: chrome
+        record: true
+     env:
         CYPRESS_RECORD_KEY: 4737836d-3dd9-4903-bcf6-24c5e4d81c6c
         CYPRESS_PROJECT_ID: a8nh14
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
