--- a/.github/workflows/master-deployment.yml
+++ b/.github/workflows/master-deployment.yml
@@ -57,73 +57,73 @@ jobs:
         aws-region: us-west-1
     - run: curl ${{ secrets.INDEX_HTML_DEPLOYMENT_URL }} > dist/index.html
     - run: aws s3 rm s3://neodash.graphapp.io/ --recursive && aws s3 sync dist s3://neodash.graphapp.io/ --acl public-read
-# build-docker:
-#   needs: build-test
-#   runs-on: ubuntu-latest
-#   strategy:
-#     matrix:
-#       node-version: [18.x]
-#   steps:
-#   - name: run Docker 
-#     uses: actions/checkout@v2
-#   - run: rm -rf docs
-#   - name: Login to Docker Hub
-#     uses: docker/login-action@v1
-#     with:
-#       username: ${{ secrets.DOCKER_HUB_USERNAME }}
-#       password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-#   - name: Set up Docker Buildx
-#     uses: docker/setup-buildx-action@v1
-#   - name: Build and push
-#     uses: docker/build-push-action@v2
-#     with:
-#       context: .
-#       file: ./Dockerfile
-#       push: true
-#       tags: ${{ secrets.DOCKER_HUB_USERNAME }}/neodash:latest,${{ secrets.DOCKER_HUB_USERNAME }}/neodash:2.2.5
-#  deploy-gallery:
-#    runs-on: ubuntu-latest
-#    strategy:
-#      matrix:
-#        node-version: [18.x]
-#    steps:
-#    - uses: actions/checkout@v2
-#    - name: Use Node.js ${{ matrix.node-version }}
-#      uses: actions/setup-node@v1
-#      with:
-#        node-version: ${{ matrix.node-version }}
-#    - run: cd gallery && yarn install
-#    - run: cd gallery && yarn run build
-#    - name: Set AWS credentials
-#      uses: aws-actions/configure-aws-credentials@v1
-#      with:
-#        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#        aws-region: us-west-1
-#    - run: aws s3 rm s3://neodash-gallery.graphapp.io/ --recursive && aws s3 sync gallery/build s3://neodash-gallery.graphapp.io/ --acl public-read
-#  deploy-docs:
-#     needs: build-test
-#     runs-on: ubuntu-latest
-#     strategy:
-#       matrix:
-#         node-version: [18.x]
-#     steps:
-#       - uses: actions/checkout@v2
-#       - name: Use Node.js ${{ matrix.node-version }}
-#         uses: actions/setup-node@v1
-#         with:
-#           node-version: ${{ matrix.node-version }}
-#       - run: rm -rf docs
-#       - run: yarn install
-#       - run: PRODUCTION=true && yarn run build
-#       - name: Set AWS credentials
-#         uses: aws-actions/configure-aws-credentials@v1
-#         with:
-#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#           aws-region: us-west-1
-#       - run: curl ${{ secrets.INDEX_HTML_DEPLOYMENT_URL }} > dist/index.html
-#       - run: aws s3 rm s3://neodash.graphapp.io/ --recursive && aws s3 sync dist s3://neodash.graphapp.io/ --acl public-read
+build-docker:
+  needs: build-test
+  runs-on: ubuntu-latest
+  strategy:
+    matrix:
+      node-version: [18.x]
+  steps:
+  - name: run Docker 
+    uses: actions/checkout@v2
+  - run: rm -rf docs
+  - name: Login to Docker Hub
+    uses: docker/login-action@v1
+    with:
+      username: ${{ secrets.DOCKER_HUB_USERNAME }}
+      password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+  - name: Set up Docker Buildx
+    uses: docker/setup-buildx-action@v1
+  - name: Build and push
+    uses: docker/build-push-action@v2
+    with:
+      context: .
+      file: ./Dockerfile
+      push: true
+      tags: ${{ secrets.DOCKER_HUB_USERNAME }}/neodash:latest,${{ secrets.DOCKER_HUB_USERNAME }}/neodash:2.2.5
+ deploy-gallery:
+   runs-on: ubuntu-latest
+   strategy:
+     matrix:
+       node-version: [18.x]
+   steps:
+   - uses: actions/checkout@v2
+   - name: Use Node.js ${{ matrix.node-version }}
+     uses: actions/setup-node@v1
+     with:
+       node-version: ${{ matrix.node-version }}
+   - run: cd gallery && yarn install
+   - run: cd gallery && yarn run build
+   - name: Set AWS credentials
+     uses: aws-actions/configure-aws-credentials@v1
+     with:
+       aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+       aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+       aws-region: us-west-1
+   - run: aws s3 rm s3://neodash-gallery.graphapp.io/ --recursive && aws s3 sync gallery/build s3://neodash-gallery.graphapp.io/ --acl public-read
+ deploy-docs:
+    needs: build-test
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [18.x]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: rm -rf docs
+      - run: yarn install
+      - run: PRODUCTION=true && yarn run build
+      - name: Set AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-west-1
+      - run: curl ${{ secrets.INDEX_HTML_DEPLOYMENT_URL }} > dist/index.html
+      - run: aws s3 rm s3://neodash.graphapp.io/ --recursive && aws s3 sync dist s3://neodash.graphapp.io/ --acl public-read
   build-npm:
     needs: build-test
     runs-on: ubuntu-latest
