--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "mui-color": "^2.0.0-beta.2",
     "mui-nested-menu": "^3.2.1",
     "neo4j-client-sso": "^1.2.2",
+    "openai": "^3.2.1",
     "postcss": "^8.4.21",
     "postcss-loader": "^7.2.4",
     "postcss-preset-env": "^8.3.0",
