Fixed deploy script, revert default SSO setting

--- a/public/config.json
+++ b/public/config.json
@@ -1,5 +1,5 @@
 {
-  "ssoEnabled": true,
+  "ssoEnabled": false,
   "ssoDiscoveryUrl": "https://example.com",
   "standalone": false,
   "standaloneProtocol": "neo4j",
