Bring back new extensions (Workflows & Sidebar) from fork (#452)
* fix wrong import

* fix missing functio in drilldownMap

* Update package.json

* Removed outdated deploy script

* added actions into new graph

* Reworking map to use WHO geoJson, to move those in the neodash CDN

* removing old geojson

* Moved geojson files to CDN

* Work in progress on node editing

* second draft for polygon map, todo: remove choropleth when polygonmap is ready

* Updated graph

* Second draft of the map, to fix data bindign process and legend styòing

* Changed binding logic to actually remove unbinded data from legend calculation

* Removed Choropleth, updated object/file naming conventions

* Updated names

* Updated names

* fixed clusterMarkers and removed older lines

* Adding TODO

* WIP on graph interactivity

* Better adding of nodes

* Added expansion

* Relationship and node editing interface (not complete)

* bootstrapping alert logic, now we have a button that can trigger the rendering and defined a new field in the state called extensionsConfig to manage the current and future extensions configurations

* Expanding nodes (v0.1)

* working on alert interface

* Even cleaner graph visualization code

* Added logic for query inside drawer, added generalized selectors/reducer/actions for extensions and built skeleton for alerting drilldown flow

* Editing and exploration is done

* changed some file names and added title for extensions (binded within the state)

* Final version of exploration/editing in the graph

* Fixed locking for new code structure

* Usuability fix for label entry component

* Final fixes to new graph interactivity

* embedded graph report inside dialog

* fixed startup db selection for alert settings

* Fixed curvature errors

* Fixed example modal for the graph

* Changed Report in alert inspector to ReportWrapper

* added settings for extensions adnd binded some of the

--- a/package.json
+++ b/package.json
@@ -52,9 +52,11 @@
     "@nivo/pie": "^0.82.1",
     "@nivo/radar": "^0.82.1",
     "@nivo/sankey": "^0.82.1",
+    "@nivo/scatterplot": "^0.83.0",
     "@nivo/sunburst": "^0.82.1",
     "@nivo/treemap": "^0.82.1",
     "babel-runtime": "^6.26.0",
+    "chroma-js": "^2.4.2",
     "classnames": "^2.3.1",
     "d3-scale-chromatic": "^3.0.0",
     "dayjs": "^1.11.7",
@@ -62,7 +64,6 @@
     "leaflet": "^1.7.1",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
-    "material-ui-popup-state": "^1.9.3",
     "mui-color": "^2.0.0-beta.2",
     "mui-nested-menu": "^3.2.1",
     "neo4j-client-sso": "^1.2.2",
@@ -82,6 +83,7 @@
     "react-leaflet-heatmap-layer-v3": "^3.0.3-beta-1",
     "react-markdown": "^8.0.0",
     "react-redux": "^7.2.6",
+    "react-show-more-text": "^1.6.2",
     "react-use-error-boundary": "^3.0.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
