--- a/package.json
+++ b/package.json
@@ -59,18 +59,21 @@
     "d3-scale-chromatic": "^3.0.0",
     "dayjs": "^1.11.7",
     "dom-to-image": "^2.6.0",
+    "fs": "^0.0.1-security",
     "leaflet": "^1.7.1",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
     "material-ui-color-picker": "^3.5.1",
     "mui-nested-menu": "^3.2.0",
     "neo4j-client-sso": "^1.2.2",
+    "openai": "^3.2.1",
     "react": "^17.0.2",
     "react-cool-dimensions": "^2.0.7",
     "react-dom": "^17.0.2",
     "react-force-graph-2d": "^1.23.8",
     "react-gauge-chart": "^0.4.0",
     "react-grid-layout": "^1.3.4",
+    "react-json-view": "^1.21.3",
     "react-leaflet": "^3.2.5",
     "react-leaflet-cluster": "^1.0.4",
     "react-leaflet-enhanced-marker": "^1.0.21",
@@ -82,8 +85,9 @@
     "redux-thunk": "^2.4.1",
     "remark-gfm": "^3.0.1",
     "reselect": "^4.1.5",
+    "ts-node": "^10.9.1",
     "use-neo4j": "^0.3.13",
-    "yaml": "^2.2.1"
+    "yaml": "^2.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.8",
