Added config-based custom styling override (#454)
* Dynamic style

* Style 1

* Empty style

* no logo

* Load of style needle

* Header configs

* Revert dev

* Extra configs

--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "@babel/register": "^7.16.9",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@redux-devtools/extension": "^3.2.3",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
@@ -118,7 +119,7 @@
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "react-hot-loader": "^4.13.0",
+    "react-refresh": "^0.14.0",
     "serverless-finch": "^4.0.0",
     "source-map-loader": "^4.0.0",
     "style-loader": "^1.1.3",
