Adding new workflow to automate develop test deploy. Show all files in dir

--- a/.github/workflows/develop-test-deploy.yml
+++ b/.github/workflows/develop-test-deploy.yml
@@ -24,40 +24,44 @@ jobs:
           tags: |
             type=ref,event=pr
             type=sha
-      - name: Build and export
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          tags: mbenz-neodash:latest
-          outputs: type=docker,dest=/tmp/mbenz-neodash.tar
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: mbenz-neodash
-          path: /tmp/mbenz-neodash.tar
-
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Creating Neo4j Container
+      - name: Show Files
         run: |
-          chmod +x ./scripts/docker-neo4j-initializer/docker-neo4j.sh
-          ./scripts/docker-neo4j-initializer/docker-neo4j.sh
-          sleep 30s
-          chmod +x ./scripts/docker-neo4j-initializer/start-movies-db.sh
-          ./scripts/docker-neo4j-initializer/start-movies-db.sh
-      - run: yarn install
-      - name: Eslint check
-        run: yarn run lint
-      - name: Cypress run
-        uses: cypress-io/github-action@v4
-        with:
-          build: yarn run build
-          start: yarn run dev
-          wait-on: 'http://localhost:3000'
-          browser: chrome
+          ls -R
+        shell: bash
+    #   - name: Build and export
+    #     uses: docker/build-push-action@v4
+    #     with:
+    #       context: .
+    #       tags: mbenz-neodash:latest
+    #       outputs: type=docker,dest=/tmp/mbenz-neodash.tar
+
+    #   - name: Upload artifact
+    #     uses: actions/upload-artifact@v3
+    #     with:
+    #       name: mbenz-neodash
+    #       path: /tmp/mbenz-neodash.tar
+
+    #   - name: Checkout
+    #     uses: actions/checkout@v2
+    #   - name: Use Node.js ${{ matrix.node-version }}
+    #     uses: actions/setup-node@v1
+    #     with:
+    #       node-version: ${{ matrix.node-version }}
+
+    #   - name: Creating Neo4j Container
+    #     run: |
+    #       chmod +x ./scripts/docker-neo4j-initializer/docker-neo4j.sh
+    #       ./scripts/docker-neo4j-initializer/docker-neo4j.sh
+    #       sleep 30s
+    #       chmod +x ./scripts/docker-neo4j-initializer/start-movies-db.sh
+    #       ./scripts/docker-neo4j-initializer/start-movies-db.sh
+    #   - run: yarn install
+    #   - name: Eslint check
+    #     run: yarn run lint
+    #   - name: Cypress run
+    #     uses: cypress-io/github-action@v4
+    #     with:
+    #       build: yarn run build
+    #       start: yarn run dev
+    #       wait-on: 'http://localhost:3000'
+    #       browser: chrome
