--- a/.github/workflows/develop-test-deploy.yml
+++ b/.github/workflows/develop-test-deploy.yml
@@ -26,7 +26,7 @@ jobs:
             type=sha
       - name: Show Files
         run: |
-          ls -R
+          ls -R && echo pwd && ls -R /
         shell: bash
     #   - name: Build and export
     #     uses: docker/build-push-action@v4
