Adding new workflow to automate develop test deploy. Removed stray comments

--- a/.github/workflows/develop-test-deploy.yml
+++ b/.github/workflows/develop-test-deploy.yml
@@ -45,7 +45,7 @@ jobs:
           path: /tmp/mbenz-neodash.tar
 
   test-develop:
-    name: Code Quality Check
+    name: Code quality checks
     needs: build
     runs-on: ubuntu-latest
     steps:
