--- a/.github/workflows/develop-test-deploy.yml
+++ b/.github/workflows/develop-test-deploy.yml
@@ -1,33 +1,18 @@
-name: Develop-Test-Deploy
+name: Test Feature Branch
 
 on:
-  workflow_dispatch:
-
   pull_request:
     branches: [develop]
 
 jobs:
-  build:
-    name: Build Docker Image from Source Code
+  test:
+    name: Test Feature Branch
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [18.x]
     steps:
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: |
-            updatepath.azurecr.io/neodash-mbenz
-          tags: |
-            type=ref,event=pr
-            type=sha
-
-      - name: Checkout Source Code
+      - name: Checkout Feature Branch
         uses: actions/checkout@v2
 
       - name: Use Node.js ${{ matrix.node-version }}
@@ -41,33 +26,13 @@ jobs:
           sleep 30s
           chmod +x ./scripts/docker-neo4j-initializer/start-movies-db.sh
           ./scripts/docker-neo4j-initializer/start-movies-db.sh
-
       - run: yarn install
-      - name: Eslint check
+      - name: Quality Gate 1 of 2 - Eslint check
         run: yarn run lint
-      - name: Run Cypress Tests
+      - name: Quality Gate 2 of 2 - Cypress Tests
         uses: cypress-io/github-action@v4
         with:
           build: yarn run build
           start: yarn run dev
           wait-on: 'http://localhost:3000'
           browser: chrome
-
-      - name: Removing Docs Folder
-        run: rm -rf docs
-
-      - name: Build and export
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: ./Dockerfile
-          tags: neodash-mbenz:latest
-          outputs: type=docker,dest=/tmp/neodash-mbenz.tar
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      - name: Upload Docker Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: neodash-mbenz
-          path: /tmp/neodash-mbenz.tar
