Adding new workflow to automate develop test deploy. Created new workflow files

--- a/.github/workflows/develop-deployment.yml
+++ b/.github/workflows/develop-deployment.yml
@@ -71,6 +71,7 @@ jobs:
           path: /tmp/neodash-mbenz.tar
 
   deploy-develop:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Set up Docker Buildx
