Adding new workflow to automate develop test deploy. Changed event for docker tag

--- a/.github/workflows/develop-deployment.yml
+++ b/.github/workflows/develop-deployment.yml
@@ -22,7 +22,7 @@ jobs:
           images: |
             updatepath.azurecr.io/neodash-mbenz
           tags: |
-            type=ref
+            type=ref, event=branch
             type=sha
 
       - name: Checkout Develop Branch
