--- a/public/style.config.json
+++ b/public/style.config.json
@@ -1,1 +1,5 @@
-{}
+{
+  "DASHBOARD_HEADER_BRAND_LOGO": "Onlyfans-Logo-2016.png",
+  "APPLY_CUSTOM_BRAND_LOGO": true,
+  "DASHBOARD_HEADER_COLOR": "#F0F0F0"
+}
