--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@neo4j-cypher/react-codemirror": "^1.0.2",
     "@neo4j-ndl/base": "1.7.0",
     "@neo4j-ndl/react": "1.7.0",
+    "@neode/querybuilder": "^0.1.8",
     "@nivo/bar": "^0.82.1",
     "@nivo/circle-packing": "^0.82.1",
     "@nivo/core": "^0.82.1",
@@ -92,6 +93,7 @@
     "reselect": "^4.1.8",
     "tailwindcss": "^3.3.2",
     "use-neo4j": "^0.3.13",
+    "uuid": "^9.0.0",
     "yaml": "^2.2.1"
   },
   "devDependencies": {
