Initial work on MQTT-Kafka bridge

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,34 @@ services:
       - "9000:9000"
       - "9099:9099"
 
+  zookeeper:
+    image: 'zookeeper:3.7'
+    networks:
+      - sindit_network
+    ports:
+      - '2181:2181'
+
+  kafka:
+    image: 'confluentinc/cp-kafka:latest'
+    depends_on:
+      - zookeeper
+    networks:
+      - sindit_network
+    ports:
+      - '9092:9092'
+    environment:
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+
+  mqtt_kafka_bridge:
+    image: mqtt-kafka-bridge
+    depends_on:
+      - kafka
+    networks:
+      - sindit_network
+
+
 volumes:
   sindit-minio-s3-volume:
   sindit-neo4j-conf-volume:
@@ -42,3 +70,4 @@ volumes:
   sindit-neo4j-data-volume:
   sindit-influx-db-data-volume:
   sindit-influx-db-config-volume:
+  sindit-kafka-data-volume:
