--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "build": "yarn webpack --mode production && cp -r public/* dist/",
     "build-minimal": "yarn webpack --mode production --env production && cp -r public/* dist/",
     "format": "prettier --write \"**/*.{ts,tsx}\"",
+    "mqtt-kafka-bridge": "tsc scripts/mqttKafkaBridge.ts && node scripts/mqttKafkaBridge.js",
     "lint": "eslint --ext .ts --ext .tsx .",
     "lint-staged": "lint-staged --config .lintstagedrc.json",
     "test": "yarn cypress open",
@@ -60,10 +61,12 @@
     "dayjs": "^1.11.7",
     "dom-to-image": "^2.6.0",
     "fs": "^0.0.1-security",
+    "kafkajs": "^2.2.4",
     "leaflet": "^1.7.1",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
     "material-ui-color-picker": "^3.5.1",
+    "mqtt": "^4.3.7",
     "mqtt-connection": "^4.1.0",
     "mui-nested-menu": "^3.2.0",
     "neo4j-client-sso": "^1.2.2",
