--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -5,11 +5,9 @@
     "main": "server.js",
     "license": "Apache-2.0",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
       "start": "yarn run dev",
       "dev": "node server.js & npm-watch preview",
-      "preview": "antora preview.yml",
-      "publish": "git push origin HEAD:publish"
+      "preview": "antora preview.yml"
     },
     "watch": {
       "preview": {
